# tavi255

./: README.md
AcademicInfo/AcademicInfo/: README.md
C++ Gui app/: CMakeLists.txt  README.md  main.cpp
C++ Gui app/Ui/: Delegate.cpp  Delegate.h  GuiAdmin.cpp  GuiAdmin.h  GuiUser.cpp  GuiUser.h  TableView.cpp  TableView.h  UI administrator.cpp  UI administrator.h  Ui user.cpp  Ui user.h
C++ Gui app/charts/: PieSliceChart.cpp  PieSliceChart.h
C++ Gui app/entity/: Action.h  ActionAdd.cpp  ActionAdd.h  ActionRemove.cpp  ActionRemove.h  ActionUpdate.cpp  ActionUpdate.h  Tutorial.cpp  Tutorial.h
C++ Gui app/exceptions/: exceptions.cpp  exceptions.h
C++ Gui app/generator/: generator.cpp  generator.h
C++ Gui app/repository/: FileRepo.cpp  FileRepo.h  Repo.cpp  Repo.h  SqlDatabase.cpp  SqlDatabase.h  UndoRedoRepo.cpp  UndoRedoRepo.h
C++ Gui app/run_gui/: RunGui.cpp  RunGui.h
C++ Gui app/services/: UserServices.cpp  UserServices.h  administrator.cpp  administrator.h
C++ Gui app/tests/: test.cpp  test.h
C++ Gui app/validator/: validator.cpp  validator.h
FitnessTracker/: README.md
FitnessTracker/FoodRecommandations/: food_data.csv  food_recommendation.py
FitnessTracker/client/fitness-tracker/: package.json
FitnessTracker/client/fitness-tracker/src/: App.js
FitnessTracker/client/fitness-tracker/src/components/compute calories/: Styles.js  (+1 more)
FitnessTracker/server/FitnessTracker/: FitnessTracker.csproj  FitnessTracker.sln  Program.cs  appsettings.json
FitnessTracker/server/FitnessTracker/Controllers/: FoodLogController.cs  HistoryController.cs  LoginController.cs  SignUpController.cs  TemplateController.cs  UserController.cs
FitnessTracker/server/FitnessTracker/Models/: Exercise.cs  Exercise2.cs  Exercise3.cs  ExerciseTemplate.cs  ExerciseWithSets.cs  Food.cs  Food2.cs  Food3.cs  FoodLog.cs  History.cs  History2.cs  LoginModel.cs  Observations.cs  PR.cs  Priority.cs  RepMaxes.cs  SemiTemplate.cs  Template.cs  Template2.cs  TrainerTrainee.cs  UpdateFood.cs  User.cs  UserPhoto.cs  UserProfile.cs  UserSignUp.cs
FitnessTracker/server/FitnessTracker/Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs  _ViewImports.cshtml
FitnessTracker/server/FitnessTracker/Pages/Shared/: _Layout.cshtml
FitnessTracker/server/FitnessTracker/Properties/: launchSettings.json
FitnessTracker/server/FitnessTracker/Tools/: FoodRecommendationService.cs  GetUserInfo.cs  Md5conversion.cs
ObstructionPythonGame/: README.md  main.py
ObstructionPythonGame/UI/: console.py
ObstructionPythonGame/repository/: board.py
ObstructionPythonGame/services/: player_services.py
ObstructionPythonGame/strategies/: mirror_strategy.py
ObstructionPythonGame/tests/: test.py
ObstructionPythonGame/validators/: validator.py
(+37 files in other folders)
